--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -1,6 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaVyökokeenPoisto" message="Oletko varma?" header="Vahvista" width="350" height="200"
+		closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
+				action="#{harrastajaAdmin.piilotaVyökoe}" actionListener="#{harrastajaAdmin.poistaVyökoe}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>	
 	<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 		immediate="true">
 		<ace:ajax render="@form" />
@@ -57,6 +65,6 @@
 		<f:ajax render="@form" />
 	</h:commandButton>
 	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x" styleClass="ikoni"
-		actionListener="#{harrastajaAdmin.poistaVyökoe}" action="#{harrastajaAdmin.piilotaVyökoe}" image="/kuvat/poista.png"
+		onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();" image="/kuvat/poista.png"
 		immediate="true" />
 </ui:composition>
