--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -1,7 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:ace="http://www.icefaces.org/icefaces/components">
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaRoolinPoisto" message="Oletko varma?" header="Vahvista" width="350" height="200"
+		closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').hide()"
+				action="#{perustietoAdmin.piilotaRooli}" actionListener="#{perustietoAdmin.poistaRooli}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>
 	<h:panelGrid>
 		<h:commandButton action="#{perustietoAdmin.lisääRooli}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
@@ -20,7 +27,7 @@
 						<h:outputText value="Nimi" />
 						<h:panelGrid>
 							<ace:message for="form:rooli" />
-							<h:inputText value="#{rooli.nimi}" id="rooli"/>
+							<h:inputText value="#{rooli.nimi}" id="rooli" />
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
@@ -33,12 +40,12 @@
 						action="#{perustietoAdmin.peruutaRoolimuutos}" image="/kuvat/peruuta_muutos.png" immediate="true">
 						<f:ajax render="@form" />
 					</h:commandButton>
-					<h:commandButton rendered="#{rooli.poistettavissa and fn:length(rooliKäyttö) == 0}" value="x"
-						styleClass="ikoni" actionListener="#{perustietoAdmin.poistaRooli}"
-						action="#{perustietoAdmin.piilotaRooli}" image="/kuvat/poista.png" immediate="true" />
+					<h:commandButton rendered="#{rooli.poistettavissa and fn:length(rooliKäyttö) == 0}" value="x" styleClass="ikoni"
+						onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(rooliKäyttö)})" style="width:300px" rendered="#{rooli != null and rooli.poistettavissa}" >
+			<ace:panel header="Käyttö (#{fn:length(rooliKäyttö)})" style="width:300px"
+				rendered="#{rooli != null and rooli.poistettavissa}">
 				<ace:dataTable value="#{rooliKäyttö}" var="_henkilö" rows="10" rendered="#{fn:length(rooliKäyttö) > 0}">
 					<ace:column>
 						<h:outputText value="#{_henkilö.nimi}" />
