--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -1,6 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaSopimustyypinPoisto" message="Oletko varma?" header="Vahvista" width="350"
+		height="200" closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()"
+				action="#{perustietoAdmin.piilotaSopimustyyppi}" actionListener="#{perustietoAdmin.poistaSopimustyyppi}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>	
 	<h:panelGrid>
 		<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
@@ -37,6 +45,15 @@
 				<ace:column headerText="Perheale">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.perhealennus}" />
 				</ace:column>
+				<ace:column headerText="Voimassa">
+					<h:outputText value="#{_sopimustyyppi.oletusKuukaudetVoimassa}" />
+				</ace:column>
+				<ace:column headerText="Kertoja">
+					<h:outputText value="#{_sopimustyyppi.oletusTreenikerrat}" />
+				</ace:column>
+				<ace:column headerText="Maksuväli">
+					<h:outputText value="#{_sopimustyyppi.oletusMaksuväli}" />
+				</ace:column>			
 			</ace:dataTable>
 			<h:panelGrid style="margin-left:20px">
 				<ace:panel header="Rooli" rendered="#{sopimustyyppi != null}" >
@@ -86,6 +103,21 @@
 							<ace:message for="form:perhealennus" />
 							<h:selectBooleanCheckbox value="#{sopimustyyppi.perhealennus}" id="perhealennus" />
 						</h:panelGrid>
+						<h:outputText value="Oletus-kk voim" />
+						<h:panelGrid>
+							<ace:message for="form:oletuskk" />
+							<h:inputText value="#{sopimustyyppi.oletusKuukaudetVoimassa}" id="oletuskk" />
+						</h:panelGrid>
+						<h:outputText value="Oletuskertoja" />
+						<h:panelGrid>
+							<ace:message for="form:oleuskerrrat" />
+							<h:inputText value="#{sopimustyyppi.oletusTreenikerrat}" id="oletuskerrat" />
+						</h:panelGrid>
+						<h:outputText value="Oletusmaksuväli" />
+						<h:panelGrid>
+							<ace:message for="form:oletusmaksuväli" />
+							<h:inputText value="#{sopimustyyppi.oletusMaksuväli}" id="oletusmaksuväli" />
+						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
 				<h:panelGrid columns="3">
@@ -98,11 +130,10 @@
 						<f:ajax render="@form" />
 					</h:commandButton>
 					<h:commandButton rendered="#{sopimustyyppi.poistettavissa and fn:length(sopimustyyppiKäyttö) == 0}" value="x"
-						styleClass="ikoni" actionListener="#{perustietoAdmin.poistaSopimustyyppi}"
-						action="#{perustietoAdmin.piilotaSopimustyyppi}" image="/kuvat/poista.png" immediate="true" />
+						styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(sopimustyyppiKäyttö)})" style="width:300px"
+			<ace:panel header="Käyttö (#{fn:length(sopimustyyppiKäyttö)})" style="width:200px"
 				rendered="#{sopimustyyppi != null and sopimustyyppi.poistettavissa}">
 				<ace:dataTable value="#{sopimustyyppiKäyttö}" var="_sopimus" rows="10"
 					rendered="#{fn:length(sopimustyyppiKäyttö) > 0}">
