--- a/src/main/webapp/admin/perustiedot/treenityypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenityypit.xhtml
@@ -1,6 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaTreenityypinPoisto" message="Oletko varma?" header="Vahvista" width="350"
+		height="200" closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').hide()"
+				action="#{perustietoAdmin.piilotaTreenityyppi}" actionListener="#{perustietoAdmin.poistaTreenityyppi}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>
 	<h:panelGrid>
 		<h:commandButton action="#{perustietoAdmin.lisääTreenityyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
@@ -33,11 +41,12 @@
 						<f:ajax render="@form" />
 					</h:commandButton>
 					<h:commandButton rendered="#{treenityyppi.poistettavissa and fn:length(treenityyppiKäyttö) == 0}" value="x"
-						styleClass="ikoni" actionListener="#{perustietoAdmin.poistaTreenityyppi}"
-						action="#{perustietoAdmin.piilotaTreenityyppi}" image="/kuvat/poista.png" immediate="true" />
+						styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaTreenityypinPoisto').show();" image="/kuvat/poista.png"
+						immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(treenityyppiKäyttö)})" style="width:300px" rendered="#{treenityyppi != null and treenityyppi.poistettavissa}">
+			<ace:panel header="Käyttö (#{fn:length(treenityyppiKäyttö)})" style="width:300px"
+				rendered="#{treenityyppi != null and treenityyppi.poistettavissa}">
 				<ace:dataTable value="#{treenityyppiKäyttö}" var="_treeni" rows="10" rendered="#{fn:length(treenityyppiKäyttö) > 0}">
 					<ace:column>
 						<h:outputText value="#{_treeni.nimi}" />
