--- a/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
+++ b/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
@@ -1,15 +1,23 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:ace="http://www.icefaces.org/icefaces/components">
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaVyöarvonPoisto" message="Oletko varma?" header="Vahvista" width="350" height="200"
+		closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').hide()"
+				action="#{perustietoAdmin.piilotaVyöarvo}" actionListener="#{perustietoAdmin.poistaVyöarvo}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>
 	<h:panelGrid>
 		<h:commandButton action="#{perustietoAdmin.lisääVyöarvo}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
 		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
-			<ace:dataTable value="#{kaikkiVyöarvot}" var="_vyöarvo" selectionMode="single" rows="15" paginator="true" paginatorPosition="bottom"
-				rowSelectListener="#{perustietoAdmin.vyöarvoValittu}" stateMap="#{perustietoAdmin.vyöarvoRSM}">
+			<ace:dataTable value="#{kaikkiVyöarvot}" var="_vyöarvo" selectionMode="single" rows="15" paginator="true"
+				paginatorPosition="bottom" rowSelectListener="#{perustietoAdmin.vyöarvoValittu}"
+				stateMap="#{perustietoAdmin.vyöarvoRSM}">
 				<ace:column headerText="Vyöarvo">
 					<h:outputText value="#{_vyöarvo.nimi}" />
 				</ace:column>
@@ -29,24 +37,24 @@
 						<h:outputText value="Nimi" />
 						<h:panelGrid>
 							<ace:message for="form:a_vyöarvo" />
-							<h:inputText value="#{vyöarvo.nimi}" id="a_vyöarvo" size="12"/>
+							<h:inputText value="#{vyöarvo.nimi}" id="a_vyöarvo" size="12" />
 						</h:panelGrid>
 						<h:outputText value="Minimikuukaudet" />
 						<h:panelGrid>
 							<ace:message for="form:minimikuukaudet" />
-							<h:inputText value="#{vyöarvo.minimikuukaudet}" id="minimikuukaudet" size="12"/>
+							<h:inputText value="#{vyöarvo.minimikuukaudet}" id="minimikuukaudet" size="12" />
 						</h:panelGrid>
 						<h:outputText value="Minimitreenit" />
 						<h:panelGrid>
 							<ace:message for="form:minimitreenit" />
-							<h:inputText value="#{vyöarvo.minimitreenit}" id="minimitreenit" size="12"/>
+							<h:inputText value="#{vyöarvo.minimitreenit}" id="minimitreenit" size="12" />
 						</h:panelGrid>
 						<h:outputText value="Järjestys" />
 						<h:panelGrid>
 							<ace:message for="form:järjestys" />
-							<h:inputText value="#{vyöarvo.järjestys}" id="järjestys" size="12"/>
+							<h:inputText value="#{vyöarvo.järjestys}" id="järjestys" size="12" />
 						</h:panelGrid>
-					</h:panelGrid>					
+					</h:panelGrid>
 				</ace:panel>
 				<h:panelGrid columns="3">
 					<h:commandButton rendered="#{vyöarvo != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
@@ -58,11 +66,12 @@
 						<f:ajax render="@form" />
 					</h:commandButton>
 					<h:commandButton rendered="#{vyöarvo.poistettavissa and fn:length(vyöarvoKäyttö) == 0}" value="x"
-						styleClass="ikoni" actionListener="#{perustietoAdmin.poistaVyöarvo}"
-						action="#{perustietoAdmin.piilotaVyöarvo}" image="/kuvat/poista.png" immediate="true" />
+						styleClass="ikoni" image="/kuvat/poista.png" immediate="true"
+						onclick="ice.ace.instance('form:vahvistaVyöarvonPoisto').show();" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(vyöarvoKäyttö)})" style="width:300px" rendered="#{vyöarvo != null and vyöarvo.poistettavissa}" >
+			<ace:panel header="Käyttö (#{fn:length(vyöarvoKäyttö)})" style="width:300px"
+				rendered="#{vyöarvo != null and vyöarvo.poistettavissa}">
 				<ace:dataTable value="#{vyöarvoKäyttö}" var="_harrastaja" rows="10" rendered="#{fn:length(vyöarvoKäyttö) > 0}">
 					<ace:column>
 						<h:outputText value="#{_harrastaja.henkilö.nimi}" />
