--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -1,20 +1,28 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:confirmationDialog id="vahvistaVyökokeenPoisto" message="Oletko varma?" header="Vahvista" width="350" height="200"
+	<ace:confirmationDialog id="vahvistaVyökokeenPoisto"
+		message="Oletko varma?" header="Vahvista" width="350" height="200"
 		closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
-			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
-				action="#{harrastajaAdmin.piilotaVyökoe}" actionListener="#{harrastajaAdmin.poistaVyökoe}" />
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
+			<h:commandButton value="Kyllä"
+				onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
+				action="#{harrastajaAdmin.piilotaVyökoe}"
+				actionListener="#{harrastajaAdmin.poistaVyökoe}" />
+			<h:commandButton value="Ei"
+				onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" />
 		</h:panelGrid>
-	</ace:confirmationDialog>	
-	<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true">
+	</ace:confirmationDialog>
+	<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" value="x"
+		styleClass="ikoni" image="/kuvat/lisää.png" immediate="true">
 		<ace:ajax render="@form" />
 	</h:commandButton>
-	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe" selectionMode="single" rows="10"
-		rowSelectListener="#{harrastajaAdmin.vyökoeValittu}" stateMap="#{harrastajaAdmin.vyökoeRSM}">
+	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe"
+		selectionMode="single" rows="10"
+		rowSelectListener="#{harrastajaAdmin.vyökoeValittu}"
+		stateMap="#{harrastajaAdmin.vyökoeRSM}">
 		<ace:column>
 			<h:graphicImage value="/kuvat/vyöt/#{_vyökoe.vyöarvo.id}.png" />
 		</ace:column>
@@ -26,45 +34,53 @@
 				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
-		<ace:column headerText="Päiviä välissä">
+		<ace:column headerText="Aikaa välissä">
 			<h:outputText value="#{_vyökoe.aikaaVälissä}" />
 		</ace:column>
 		<ace:column headerText="Seuraavaan kokeeseen">
 			<h:panelGrid columns="2" rendered="#{_vyökoe.tuoreinVyökoe}">
 				<h:outputText value="Päiviä" />
-				<h:outputText value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).päiviä}" />
+				<h:outputText
+					value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).aikaString}" />
 				<h:outputText value="Treenikertoja" />
-				<h:outputText value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja}" />
+				<h:outputText
+					value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja}" />
 			</h:panelGrid>
 		</ace:column>
 	</ace:dataTable>
 	<p />
-	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}" style="width:300px">
+	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}"
+		style="width:300px">
 		<h:panelGrid>
 			<h:outputText value="Vyöarvo" />
 			<h:panelGrid>
 				<ace:message for="form:vyöarvo" />
 				<h:selectOneMenu value="#{vyökoe.vyöarvo}" id="vyöarvo">
-					<f:selectItems value="#{vyöarvot}" var="_vyöarvo" itemValue="#{_vyöarvo}" itemLabel="#{_vyöarvo.nimi}" />
+					<f:selectItems value="#{vyöarvot}" var="_vyöarvo"
+						itemValue="#{_vyöarvo}" itemLabel="#{_vyöarvo.nimi}" />
 					<f:converter converterId="objectConverter" />
 				</h:selectOneMenu>
 			</h:panelGrid>
 			<h:outputText value="Päivä" />
 			<h:panelGrid>
 				<ace:message for="form:vyökoepäivä" />
-				<ace:dateTimeEntry value="#{vyökoe.päivä}" renderAsPopup="true" pattern="dd.MM.yyyy" id="vyökoepäivä" timeZone="EET" />
+				<ace:dateTimeEntry value="#{vyökoe.päivä}" renderAsPopup="true"
+					pattern="dd.MM.yyyy" id="vyökoepäivä" timeZone="EET" />
 			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
-	<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-		action="#{harrastajaAdmin.tallennaVyökoe}">
+	<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni"
+		image="/kuvat/tallenna.jpg" action="#{harrastajaAdmin.tallennaVyökoe}">
 		<f:ajax execute="@form" render="@form" />
 	</h:commandButton>
-	<h:commandButton rendered="#{vyökoe != null}" value="x" styleClass="ikoni" immediate="true"
-		action="#{harrastajaAdmin.peruutaVyökoemuutos}" image="/kuvat/peruuta_muutos.png">
+	<h:commandButton rendered="#{vyökoe != null}" value="x"
+		styleClass="ikoni" immediate="true"
+		action="#{harrastajaAdmin.peruutaVyökoemuutos}"
+		image="/kuvat/peruuta_muutos.png">
 		<f:ajax render="@form" />
 	</h:commandButton>
-	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x" styleClass="ikoni"
-		onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();" image="/kuvat/poista.png"
-		immediate="true" />
+	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x"
+		styleClass="ikoni"
+		onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();"
+		image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
