--- a/src/main/webapp/admin/harrastajat/roolit.xhtml
+++ b/src/main/webapp/admin/harrastajat/roolit.xhtml
@@ -5,7 +5,7 @@
 		<ace:list value="#{roolit}" var="_rooli" selectionMode="multiple">
 			<h:outputText value="#{_rooli.nimi}" />
 		</ace:list>
-		<ace:list value="#{harrastaja.henkilö.roolit}" var="_rooli" selectionMode="multiple">
+		<ace:list value="#{harrastaja.roolit}" var="_rooli" selectionMode="multiple">
 			<h:outputText value="#{_rooli.nimi}" />
 		</ace:list>
 	</ace:listControl>
