--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -7,13 +7,13 @@
 	</h:commandButton>
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single"
 		stateMap="#{harrastajaAdmin.harrastajaRSM}" rows="10" rowSelectListener="#{harrastajaAdmin.harrastajaValittu}">
-		<ace:column headerText="Etunimi" sortBy="#{_harrastaja.henkilö.etunimi}" filterBy="#{_harrastaja.henkilö.etunimi}"
+		<ace:column headerText="Etunimi" sortBy="#{_harrastaja.etunimi}" filterBy="#{_harrastaja.etunimi}"
 			filterMatchMode="contains">
-			<h:outputText value="#{_harrastaja.henkilö.etunimi}" />
+			<h:outputText value="#{_harrastaja.etunimi}" />
 		</ace:column>
-		<ace:column headerText="Sukunimi" sortBy="#{_harrastaja.henkilö.sukunimi}" filterBy="#{_harrastaja.henkilö.sukunimi}"
+		<ace:column headerText="Sukunimi" sortBy="#{_harrastaja.sukunimi}" filterBy="#{_harrastaja.sukunimi}"
 			filterMatchMode="contains">
-			<h:outputText value="#{_harrastaja.henkilö.sukunimi}" />
+			<h:outputText value="#{_harrastaja.sukunimi}" />
 		</ace:column>
 		<ace:column headerText="Ikä">
 			<h:outputText value="#{_harrastaja.ikä}" />
@@ -25,7 +25,7 @@
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.maksutOK}" />
 		</ace:column>
 		<ace:column headerText="Arkistoitu">
-			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.henkilö.arkistoitu}" />
+			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.arkistoitu}" />
 		</ace:column>
 	</ace:dataTable>
 	<p />
