--- a/src/main/webapp/admin/harrastajat/treenikäynnit.xhtml
+++ b/src/main/webapp/admin/harrastajat/treenikäynnit.xhtml
@@ -29,7 +29,7 @@
 		</ace:column>
 		<ace:column headerText="Vetäjä">
 			<ui:repeat value="#{_treenikäynti.treenisessio.vetäjät}" var="_vetäjä">
-				<h:outputText value="#{_vetäjä.henkilö.nimi}" />
+				<h:outputText value="#{_vetäjä.nimi}" />
 				<br />
 			</ui:repeat>
 		</ace:column>
