--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -55,7 +55,7 @@
 					</h:selectOneMenu>
 					<h:commandButton action="#{harrastajaAdmin.lisääPerhe}" value="x" image="/kuvat/lisää_perhe.jpg"
 						style="height:50px; width:50px; margin-left:15px">
-						<f:ajax execute="form:sukunimi form:etunimi" render="form:perhepanel" />
+						<f:ajax execute="form:sukunimi" render="form:perhepanel form:henkilötietopanel" />
 					</h:commandButton>
 				</h:panelGrid>
 			</ace:panel>
