--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -18,7 +18,7 @@
 					<h:inputText value="#{harrastaja.etunimi}" id="etunimi" styleClass="capitalized" />
 				</h:panelGrid>
 				<h:outputText value="Sukunimi" />
-				<h:panelGrid>
+				<h:panelGrid id="sukunimigrid">
 					<ace:message for="form:sukunimi" />
 					<h:inputText value="#{harrastaja.sukunimi}" id="sukunimi" styleClass="capitalized" />
 				</h:panelGrid>
@@ -47,7 +47,7 @@
 		<h:panelGrid>
 			<ace:panel header="Perhe" styleClass="panel" id="perhepanel" style="width:450px">
 				<h:panelGrid columns="2">
-					<h:selectOneMenu value="#{harrastaja.perhe}" valueChangeListener="#{harrastajaAdmin.perheMuuttui}">
+					<h:selectOneMenu value="#{harrastaja.perhe}" valueChangeListener="#{harrastajaAdmin.perheMuuttui}" style="width: 350px">
 						<f:selectItem itemValue="#{null}" itemLabel="" noSelectionItem="true" />
 						<f:selectItems value="#{perheet}" var="_perhe" itemValue="#{_perhe}" itemLabel="#{_perhe.kuvaus}" />
 						<f:converter converterId="objectConverter" />
@@ -55,7 +55,7 @@
 					</h:selectOneMenu>
 					<h:commandButton action="#{harrastajaAdmin.lisääPerhe}" value="x" image="/kuvat/lisää_perhe.jpg"
 						style="height:50px; width:50px; margin-left:15px">
-						<f:ajax execute="form:sukunimi" render="form:perhepanel form:henkilötietopanel" />
+						<f:ajax execute="form:sukunimi" render="form:perhepanel form:sukunimigrid form:huoltajapanel" />
 					</h:commandButton>
 				</h:panelGrid>
 			</ace:panel>
@@ -64,7 +64,7 @@
 					<h:panelGrid columns="2">
 						<h:panelGrid columns="2">
 							<ace:message for="huoltaja"/>
-							<h:selectOneMenu value="#{harrastaja.huoltaja}" required="true" id="huoltaja">
+							<h:selectOneMenu value="#{harrastaja.huoltaja}" required="true" id="huoltaja" style="width: 350px">
 								<f:selectItem itemValue="#{null}" itemLabel="" noSelectionItem="true" />
 								<f:selectItems value="#{harrastaja.perhe.huoltajat}" var="_huoltaja" itemValue="#{_huoltaja}"
 									itemLabel="#{_huoltaja.nimi}" />
@@ -75,12 +75,14 @@
 							rendered="#{harrastaja.perhe != null}" style="height:50px; width:50px; margin-left:15px">
 							<f:ajax execute="form:sukunimi form:etunimi" render="form:huoltajapanel" />
 						</h:commandButton>
+<!-- 						
 						<h:outputText value="Etunimi" rendered="#{harrastaja.huoltaja != null and harrastaja.huoltaja.tallentamaton}" />
 						<h:inputText value="#{harrastaja.huoltaja.etunimi}"
 							rendered="#{harrastaja.huoltaja != null and harrastaja.huoltaja.tallentamaton}" />
 						<h:outputText value="Sukunimi" rendered="#{harrastaja.huoltaja != null and harrastaja.huoltaja.tallentamaton}" />
 						<h:inputText value="#{harrastaja.huoltaja.sukunimi}"
 							rendered="#{harrastaja.huoltaja != null and harrastaja.huoltaja.tallentamaton}" />
+-->							
 					</h:panelGrid>
 				</ace:panel>
 			</h:panelGroup>
