--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -72,8 +72,8 @@
 							</h:selectOneMenu>
 						</h:panelGrid>
 						<h:commandButton action="#{harrastajaAdmin.lisääHuoltaja}" value="x" image="/kuvat/lisää_huoltaja.jpg"
-							rendered="#{harrastaja.perhe != null}" style="height:50px; width:50px; margin-left:15px">
-							<f:ajax execute="form:sukunimi" render="form:huoltajapanel" />
+							style="height:50px; width:50px; margin-left:15px">
+							<f:ajax execute="form:sukunimi" render="form:huoltajapanel form:perhepanel" />
 						</h:commandButton>
 						<h:inputText value="#{harrastaja.huoltaja.etunimi}"
 							rendered="#{harrastaja.huoltaja != null and harrastaja.huoltaja.tallentamaton}" />
