--- a/src/main/webapp/admin/perustiedot/treenit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenit.xhtml
@@ -43,10 +43,20 @@
 		<ace:column headerText="Power">
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_treeni.power}" />
 		</ace:column>
+		<ace:column headerText="Voimassa alk">
+			<h:outputText value="#{_treeni.voimassaAlkaa}">
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
+			</h:outputText>
+		</ace:column>
+		<ace:column headerText="Voimassa lop">
+			<h:outputText value="#{_treeni.voimassaPäättyy}">
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
+			</h:outputText>
+		</ace:column>
 	</ace:dataTable>
 	<p />
 	<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
-		<ace:panel header="Treeni" rendered="#{treeni != null}" styleClass="panel" style="width:350px">
+		<ace:panel header="Treeni" rendered="#{treeni != null}" styleClass="panel" style="width:450px">
 			<h:panelGrid columns="2">
 				<h:outputText value="Nimi" />
 				<h:panelGrid>
@@ -77,6 +87,16 @@
 				<h:panelGrid>
 					<ace:message for="form:treenipäättyy" />
 					<ace:dateTimeEntry value="#{treeni.päättyy}" renderAsPopup="true" pattern="HH:mm" id="treenipäättyy" timeZone="EET"/>
+				</h:panelGrid>
+				<h:outputText value="Voimassa alk" />
+				<h:panelGrid>
+					<ace:message for="form:voimassaAlkaa" />
+					<ace:dateTimeEntry value="#{treeni.voimassaAlkaa}" renderAsPopup="true" pattern="dd.MM.yyyy" id="voimassaAlkaa" timeZone="EET"/>
+				</h:panelGrid>
+				<h:outputText value="Voimassa lop" />
+				<h:panelGrid>
+					<ace:message for="form:voimassaPäättyy" />
+					<ace:dateTimeEntry value="#{treeni.voimassaPäättyy}" renderAsPopup="true" pattern="dd.MM.yyyy" id="voimassaPäättyy" timeZone="EET"/>
 				</h:panelGrid>
 				<h:outputText value="Power" />
 				<h:panelGrid>
