--- a/src/main/webapp/admin/ilmoittautumiset.xhtml
+++ b/src/main/webapp/admin/ilmoittautumiset.xhtml
@@ -1,12 +1,20 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
+	<ace:confirmationDialog id="vahvistaTreenikäynninPoisto" message="Oletko varma?" header="Vahvista" width="350"
+		height="200" closable="true" position="center">
+		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaTreenikäynninPoisto').hide()"
+				action="#{harrastajaAdmin.piilotaHarrastaja}" actionListener="#{harrastajaAdmin.poistaHarrastaja}" />
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaTreenikäynninPoisto').hide()" />
+		</h:panelGrid>
+	</ace:confirmationDialog>
 	<h:commandButton action="#{ilmoittautumisAdmin.lisääIlmoittautuminen}" value="x" styleClass="ikoni"
 		image="/kuvat/lisää.png" immediate="true">
 		<ace:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{treenikäynnit}" var="_treenikäynti" selectionMode="single"
-		stateMap="#{ilmoittautumisAdmin.rowStateMap}" rows="10" rowSelectListener="#{ilmoittautumisAdmin.treeniKäyntiValittu}">
+		stateMap="#{ilmoittautumisAdmin.treenikäyntiRSM}" rows="10" rowSelectListener="#{ilmoittautumisAdmin.treeniKäyntiValittu}">
 		<ace:column headerText="Aikaleima">
 			<h:outputText value="#{_treenikäynti.aikaleima}">
 				<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" timeZone="EET" />
@@ -35,26 +43,31 @@
 				<h:outputText value="Harrastaja" />
 				<h:panelGrid>
 					<ace:message for="form:harrastaja" />
+					<h:selectOneMenu id="harrastaja" value="#{treenikäynti.harrastaja}">
+						<f:selectItems value="#{harrastajat}" var="_harrastaja" itemLabel="#{_harrastaja.nimi}" itemValue="#{_harrastaja}" />
+						<f:converter converterId="objectConverter" />
+					</h:selectOneMenu>
+
+					<!-- 					
 					<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single" id="harrastaja" rows="5"
 						rowSelectListener="#{ilmoittautumisAdmin.harrastajaValittu}">
 						<ace:column headerText="Nimi" filterBy="#{_harrastaja.nimi}" filterMatchMode="contains">
 							<h:outputText value="#{_harrastaja.nimi}" />
 						</ace:column>
 					</ace:dataTable>
-					<!-- 
+
 					<ace:autoCompleteEntry id="harrastaja" value="#{treenikäynti.harrastaja}" listVar="_h" listValue="#{harrastajat}"
 						filterBy="#{_h.nimi}" converter="objectConverter">
 						<f:facet name="row">
 							<h:outputText value="#{_h.nimi}" />
 						</f:facet>
 					</ace:autoCompleteEntry>
-			-->
-					<!-- 				
-				<ace:autoCompleteEntry id="harrastaja" value="#{treenikäynti.harrastaja}" filterBy="#{_harrastaja.nimi}" rows="5">
-					<f:selectItems value="#{harrastajat}" var="_h" itemLabel="#{_h.nimi}" itemValue="#{_h}" />
-					<f:converter converterId="objectConverter" />
-				</ace:autoCompleteEntry>
--->
+
+					<ace:autoCompleteEntry id="harrastaja" value="#{treenikäynti.harrastaja}" filterBy="#{_harrastaja.nimi}" rows="5">
+						<f:selectItems value="#{harrastajat}" var="_h" itemLabel="#{_h.nimi}" itemValue="#{_h}" />
+						<f:converter converterId="objectConverter" />
+					</ace:autoCompleteEntry>
+					-->
 				</h:panelGrid>
 				<h:outputText value="Treeni" />
 				<h:panelGrid>
@@ -64,15 +77,10 @@
 						<f:converter converterId="objectConverter" />
 					</h:selectOneMenu>
 				</h:panelGrid>
-				<h:outputText value="Päivä" />
-				<h:panelGrid>
-					<ace:message for="form:päivä" />
-					<ace:dateTimeEntry value="#{treenikäynti.treenisessio.päivä}" renderAsPopup="true" pattern="dd.MM.yyyy" id="päivä" />
-				</h:panelGrid>
 			</h:panelGrid>
 		</ace:panel>
 		<ace:panel header="Vetäjät" styleClass="panel" style="width:500px">
-		<!-- 
+			<!-- 
 			<ace:listControl>
 				<ace:list value="#{vetäjät}" var="_vetäjä" selectionMode="multiple">
 					<h:outputText value="#{_vetäjä.nimi}" />
@@ -84,10 +92,13 @@
 		-->
 		</ace:panel>
 	</h:panelGrid>
+
 	<h:commandButton rendered="#{treenikäynti != null}" value="x" styleClass="ikoni"
 		action="#{ilmoittautumisAdmin.tallennaTreenikäynti}" image="/kuvat/tallenna.jpg" />
 	<h:commandButton rendered="#{treenikäynti != null}" value="x" styleClass="ikoni" immediate="true"
-		action="#{ilmoittautumisAdmin.peruutaMuutos}" image="/kuvat/peruuta_muutos.png" />
+		action="#{ilmoittautumisAdmin.peruutaMuutos}" image="/kuvat/peruuta_muutos.png">
+		<f:ajax render="@form" />
+	</h:commandButton>
 	<h:commandButton rendered="#{treenikäynti.poistettavissa}" value="x" styleClass="ikoni"
-		action="#{ilmoittautumisAdmin.poistaTreenikäynti}" image="/kuvat/poista.png" immediate="true" />
+		onclick="ice.ace.instance('form:vahvistaTreenikäynninPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
